--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -3,6 +3,6 @@
     <string name="app_name">Computer Info</string>
     <string name="hello_world">Hello world!</string>
     <string name="menu_settings">Settings</string>
-    <string name="title_activity_main">MainActivity</string>
+    <string name="title_activity_main">Computer Info</string>
 
 </resources>
