--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,12 +1,18 @@
 <resources>
 
-    <string name="app_name">Computer Info</string>
-    <string name="hello_world">Hello world!</string>
-    <string name="menu_settings">Settings</string>
-    <string name="title_activity_main">Computer Info</string>
-    <string name="username_and_password">Username and password</string>
-    <string name="google">Google</string>
-    <string name="choose_login_method">Choose login method</string>
-    <string name="title_activity_login">Login</string>
+		<string name="app_name">Computer Info</string>
+		<string name="hello_world">Hello world!</string>
+		<string name="menu_settings">Settings</string>
+		<string name="title_activity_main">Computer Info</string>
+		<string name="username_and_password">Username and password</string>
+		<string name="google">Google</string>
+		<string name="choose_login_method">Choose login method</string>
+		<string name="title_activity_login">Login</string>
+		<string name="computer_info">Computer Info</string>
+		<string name="username">Username:</string>
+		<string name="password">Password:</string>
+		<string name="forgot_password">Forgot password?</string>
+		<string name="sign_up">Sign up</string>
+		<string name="login">Login</string>
 
 </resources>
