--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -17,5 +17,8 @@
     <string name="title_section3">Section 3</string>
     <string name="title_section2">Section 2</string>
     <string name="title_section1">Section 1</string>
+    <string name="computers">Computers</string>
+    <string name="printers">Printers</string>
+    <string name="units">Units</string>
 
 </resources>
