--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,23 +1,28 @@
 <resources>
 
-    <string name="app_name">Computer Info</string>
-    <string name="menu_settings">Settings</string>
-    <string name="username_and_password">Username and password</string>
-    <string name="google">Google</string>
-    <string name="choose_login_method">Choose login method</string>
-    <string name="computer_info">Computer Info</string>
-    <string name="username">Username:</string>
-    <string name="password">Password:</string>
-    <string name="forgot_password">Forgot password?</string>
-    <string name="sign_up">Sign up</string>
-    <string name="login">Login</string>
-    <string name="computers">Computers</string>
-    <string name="printers">Printers</string>
-    <string name="units">Units</string>
-    <string name="title_computer_detail">Computer Detail</string>
-    <string name="settings_title">Settings</string>
-    <string name="menu_logout">Logout</string>
-    <string name="title_printer_detail">Printer Detail</string>
-    <string name="title_printer_list">Printers</string>
+		<string name="app_name">Computer Info</string>
+		<string name="menu_settings">Settings</string>
+		<string name="username_and_password">Username and password</string>
+		<string name="google">Google</string>
+		<string name="choose_login_method">Choose login method</string>
+		<string name="computer_info">Computer Info</string>
+		<string name="username">Username:</string>
+		<string name="password">Password:</string>
+		<string name="forgot_password">Forgot password?</string>
+		<string name="sign_up">Sign up</string>
+		<string name="login">Login</string>
+		<string name="computers">Computers</string>
+		<string name="printers">Printers</string>
+		<string name="units">Units</string>
+		<string name="title_computer_detail">Computer Detail</string>
+		<string name="settings_title">Settings</string>
+		<string name="menu_logout">Logout</string>
+		<string name="title_printer_detail">Printer Detail</string>
+		<string name="title_printer_list">Printers</string>
+		<string-array name="computer_sections">
+				<item >General</item>
+				<item >Processors</item>
+				<item >Memory</item>
+		</string-array>
 
 </resources>
