--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,7 +1,6 @@
 <resources>
-    	<string name="google">Google</string>
+		<string name="google">Google</string>
 		<string name="computer_info">Computer Info</string>
-		<string name="base_url">https://ci.illution.dk</string>
 		<!--  -->
 		<string name="app_name">Computer Info</string>
 		<string name="preferences">Preferences</string>
@@ -31,6 +30,10 @@
 		<string name="login_error_connection">There was an error while connecting to the server, please try again.</string>
 		<string name="login_error_validation">We couldn\'t validate your credentials, please check your username and password. This could also be a problem with the server.</string>
 		<string name="login_error_status_code">The operation didn\'t succeed. Status code: </string>
+		<string name="login_error_malformedUrl">The endpoint URL was malformed. Please check it before proceeding.</string>
+		<string name="login_error_general">A general error occured. We\'re very sorry.</string>
 		<string name="login_loading">Loading. Please wait...</string>
 		<string name="login_error_google_no_accounts">Sorry, no Google accounts were found on this device. Please set one up before proceeding.</string>
+		<string name="preference_endpoint">Endpoint</string>
+		<string name="preference_endpoint_summary">The authentication and data endpoint</string>
 </resources>
