--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -32,7 +32,7 @@
 		<string name="login_error_status_code">The operation didn\'t succeed. Status code: </string>
 		<string name="login_error_malformedUrl">The endpoint URL was malformed. Please check it before proceeding.</string>
 		<string name="login_error_general">A general error occured. We\'re very sorry.</string>
-		<string name="login_loading">Loading. Please wait...</string>
+		<string name="login_loading">Loading. Please wait&#8230;</string>
 		<string name="login_error_google_no_accounts">Sorry, no Google accounts were found on this device. Please set one up before proceeding.</string>
 		<string name="preference_endpoint">Endpoint</string>
 		<string name="preference_endpoint_summary">The authentication and data endpoint</string>
